@@ -310,6 +310,7 @@
 				<exclude name="TypesBoundAnnotationTest.java" /><!-- ok, shall not instrument test types -->
 				<exclude name="TypesBoundErrorTest.java" /><!-- ok, shall not instrument test types -->
 				<exclude name="TypeSetTest.java" /><!-- ok, shall not instrument test types -->
+				<exclude name="TypeCompareTest.java" /><!-- ok, shall not instrument test types -->
 				<exclude name="FeatureTest.java" /><!-- ok, shall not instrument test types -->
 				<exclude name="EnumTest.java" /><!-- TODO remove -->
 				<exclude name="InstanceOfTest.java" /><!-- TODO remove -->
